fix: https://github.com/H3rmt/hyprswitch/issues/115 (added Overflow::Hidden to overlay)

--- a/src/daemon/gui/launcher/launcher.css
+++ b/src/daemon/gui/launcher/launcher.css
@@ -1,5 +1,5 @@
 .launcher {
-    min-width: 550px;
+    min-width: 600px;
     font-size: 20px;
 }
 
